<resources>
    <string name="movie_star_logo">Movie star logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="google_plus_logo">Google plus logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="re_type_password">RE-TYPE PASSWORD</string>
    <string name="create_account">Create Account</string>
    <string name="back_button">Back button</string>
    <string name="star_movie">Star Movie</string>
    <string name="play_icon">Play icon</string>
    <string name="search_icon">Search icon</string>
    <string name="now_showing">Now Showing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="john_wick_banner">John Wick Banner</string>
    <string name="john_wick_3">John Wick 3</string>
    <string name="crime_2hr_10m_r">Crime | 2hr 10m | R</string>
    <string name="cast_amp_crew"><![CDATA[Cast & Crew]]></string>
    <string name="bowery_king">BOWERY KING</string>
    <string name="laurence_fishburne">Laurence Fishburne</string>
    <string name="photos">Photos</string>
    <string name="movie_photo">Movie photo</string>
    <string name="videos">Videos</string>
    <string name="_2_13">2:13</string>
    <string name="video">Video</string>
    <string name="blogs_about_this_film">Blogs About This Film</string>
    <string name="_3_hours_ago">3 hours ago</string>
    <string name="female_action_stars_we_can_t_wait">Female Action Stars We Can’t Wait</string>
    <string name="blog_image">Blog image</string>
    <string name="blog_first_paragraph">John Wick is now a marked man on the run in Manhattan. He is declared excommunicado by The High Table which places a $14 million contract bounty on his head as a result of Wick\'s unauthorized killing of High Table. \n \n At first, Wick travels to the New York Public Library and retrieves two concealed items a marker (medallion) and a crucifix necklace. Wick leaves but is pursued by a gang into an antique warehouse which leads to a bloody fight between Wick and the gang involving antique weaponry.</string>
    <string name="blog_second_paragraph">The Adjudicator contacts Winston and offers to negotiate, eventually agreeing to allow Winston to remain at The Continental, but states Wick remains a problem. Winston betrays Wick, shooting him before Wick falls from the roof of the hotel. The Adjudicator leaves The Continental but notices Wick\'s body is gone.</string>
    <string name="forward_icon">Forward icon</string>
    <string name="john_wick_3_parabellum">John Wick 3: Parabellum</string>
    <string name="_2hr_10m_r">2hr 10m | R</string>
    <string name="_3_5_5">3.5/5</string>
    <string name="action_crime_thriller">Action, Crime, Thriller</string>
    <string name="movie_synopsis">In this third installment of the adrenaline-fueled action franchise, super-assassin John Wick returns with a $14 million price tag on his head and an army of bounty-hunting…</string>
    <string name="synopsis">Synopsis</string>
    <string name="view_all">View All</string>
    <string name="reviews">Reviews</string>
    <string name="showtime">Showtime</string>
    <string name="_38_reviews">38 Reviews</string>
    <string name="may_20_2019">May 20, 2019</string>
    <string name="review_text">John Wick Chapter 3 offers great action and a more in-depth at his World in comparison to the first two entries.</string>
    <string name="profile_image">Profile image</string>
    <string name="today">Today</string>
    <string name="wed">WED</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_cinema">Choose Cinema</string>
    <string name="_2d">2D</string>
    <string name="_8_30_am">8:30 AM</string>
    <string name="choose_a_seat">Choose A Seat</string>
    <string name="imax">Imax</string>
    <string name="extra_items">Extra Items</string>
    <string name="extra_item_image">Extra item image</string>
    <string name="coca_cola">Coca Cola</string>
    <string name="_4_00">$4.00</string>
    <string name="add_an_item_icon">Add an item icon</string>
    <string name="remove_an_item_icon">Remove an item icon</string>
    <string name="_1">1</string>
    <string name="_4_items_selected">4 ITEMS SELECTED</string>
    <string name="_18_00">$18.00</string>
    <string name="total_cost">TOTAL COST</string>
    <string name="_54_00">$54.00</string>
    <string name="_continue">Continue</string>
    <string name="payment">Payment</string>
    <string name="_8_30_am_10_00_am">8:30 AM - 10:00 AM</string>
    <string name="friday_24_may_2019">Friday 24 May, 2019</string>
    <string name="seat_e4_e5">Seat: E4,E5</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="place_order">Place order</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_booked_the_movie_successful">You booked the movie successful.</string>
    <string name="theatre">THEATRE</string>
    <string name="paragon_cinema">Paragon Cinema</string>
    <string name="seat">SEAT</string>
    <string name="e4_e5">E4, E5</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="view_ticket">View Ticket</string>
    <string name="tickets">Tickets</string>
    <string name="hall">HALL</string>
    <string name="row">ROW</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="barcode">Barcode</string>
    <string name="p_a_r">P A R</string>
    <string name="_3_1_1_7_7_0_1_3_2_0_6_3_7_5">3 1 1 7 7 0 1 3 2 0 6 3 7 5</string>
    <string name="notifications">Notifications</string>
    <string name="congrat_you_booked_john_wick_3_movie_ticket_successfully">Congrat! You booked John Wick 3 movie ticket successfully.</string>
    <string name="_10_48_25_am">10:48:25 AM</string>
    <string name="notification_type_icon">Notification type icon</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="ticket">Ticket</string>
    <string name="home">Home</string>
    <string name="rish_tran">Rish Tran</string>
    <string name="member">MEMBER</string>
    <string name="thinhtran2406_gmail_com">thinhtran2406@gmail.com</string>
    <string name="_123">123</string>
    <string name="total_points">TOTAL POINTS</string>
    <string name="_06">06</string>
    <string name="movies_watched">MOVIES WATCHED</string>
    <string name="profile_icon">Profile icon</string>
    <string name="account_information">Account Information</string>
    <string name="rate_app_icon">Rate app icon</string>
    <string name="transactions_history">Transactions History</string>
    <string name="privacy_policy_icon">Privacy policy icon</string>
    <string name="rating_app">Rate App</string>
    <string name="transaction_detail_icon">Transaction detail icon</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_password">Change Password</string>
    <string name="save_change">Save Change</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="transaction_card_design">Transaction card design</string>
    <string name="visa">Visa</string>
    <string name="_4319_5312_0215_1289">4319 5312 0215 1289</string>
    <string name="card_holder">Card holder</string>
    <string name="expires">Expires</string>
    <string name="_08_23">08/23</string>
    <string name="booked_ticket">Booked Ticket</string>
    <string name="minus_54_00">- $54.00</string>
    <string name="_24_may_2019">24 MAY, 2019</string>
    <string name="transaction_history_icon">Transaction history icon</string>
    <string name="ticket_information">Ticket Information</string>
</resources>