<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="8dp"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/movie_banner"
            android:layout_width="78dp"
            android:layout_height="116dp"
            android:contentDescription="@string/john_wick_banner"
            android:scaleType="centerCrop"
            android:src="@drawable/john_wick"
            app:layout_constraintBottom_toBottomOf="@+id/cinema_seat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_name_tv" />

        <TextView
            android:id="@+id/movie_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/john_wick_3_parabellum"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/movie_showtime_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/movie_showtime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/_8_30_am_10_00_am"
            app:layout_constraintBottom_toTopOf="@+id/movie_showtime_date"
            app:layout_constraintStart_toStartOf="@+id/movie_name_tv"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_tv" />

        <TextView
            android:id="@+id/movie_showtime_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/friday_24_may_2019"
            app:layout_constraintBottom_toTopOf="@+id/cinema_seat"
            app:layout_constraintStart_toStartOf="@+id/movie_showtime_tv"
            app:layout_constraintTop_toBottomOf="@+id/movie_showtime_tv" />

        <TextView
            android:id="@+id/cinema_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/seat_e4_e5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/movie_showtime_date"
            app:layout_constraintTop_toBottomOf="@+id/movie_showtime_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>