<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/extra_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/extra_item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coke" />

    <TextView
        android:id="@+id/extra_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:includeFontPadding="false"
        android:text="@string/coca_cola"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/extra_item_price"
        app:layout_constraintEnd_toStartOf="@+id/extra_item_remove_button"
        app:layout_constraintStart_toEndOf="@+id/extra_item_image"
        app:layout_constraintTop_toTopOf="@+id/extra_item_image"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/extra_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:includeFontPadding="false"
        android:text="@string/_4_00"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/extra_item_image"
        app:layout_constraintStart_toStartOf="@+id/extra_item_name"
        app:layout_constraintTop_toBottomOf="@+id/extra_item_name" />

    <ImageView
        android:id="@+id/extra_item_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/indigo_curved_stroke_background"
        android:contentDescription="@string/add_an_item_icon"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/extra_item_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/extra_item_number"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/extra_item_number"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/black_curved_stroke_background"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/extra_item_remove_button"
        app:layout_constraintEnd_toStartOf="@+id/extra_item_add_button"
        app:layout_constraintTop_toTopOf="@+id/extra_item_remove_button" />

    <ImageView
        android:id="@+id/extra_item_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/indigo_curved_stroke_background"
        android:contentDescription="@string/remove_an_item_icon"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/extra_item_image"
        app:layout_constraintEnd_toStartOf="@+id/extra_item_number"
        app:layout_constraintTop_toTopOf="@+id/extra_item_image"
        app:srcCompat="@drawable/ic_baseline_remove_24" />

    <View
        android:id="@+id/extra_item_horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="@+id/extra_item_add_button"
        app:layout_constraintStart_toStartOf="@+id/extra_item_image"
        app:layout_constraintTop_toBottomOf="@+id/extra_item_image" />
</androidx.constraintlayout.widget.ConstraintLayout>