<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:padding="8dp">

    <ImageView
        android:id="@+id/video"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:contentDescription="@string/video"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/small_videos_one" />

    <TextView
        android:id="@+id/video_duration"
        style="@style/AllTextViews"
        android:layout_marginStart="12dp"
        android:background="@drawable/duration_background"
        android:paddingHorizontal="8dp"
        android:text="@string/_2_13"
        android:textColor="@color/duration_text_colour"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/videos_play_icon"
        app:layout_constraintStart_toStartOf="@+id/video"
        app:layout_constraintTop_toTopOf="@+id/videos_play_icon" />

    <ImageView
        android:id="@+id/videos_play_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/play_icon"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/video"
        app:layout_constraintEnd_toEndOf="@+id/video"
        app:srcCompat="@drawable/play_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>