<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/transaction_history_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/alpha_blue_oval_background"
            android:contentDescription="@string/transaction_history_icon"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/booked_ticket" />

        <TextView
            android:id="@+id/transaction_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/booked_ticket"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/transaction_description_tv"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/transaction_history_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/transaction_description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/sf_pro_text_regular"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/john_wick_3_parabellum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/transaction_title_tv"
            app:layout_constraintStart_toStartOf="@+id/transaction_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/transaction_title_tv" />

        <TextView
            android:id="@+id/transaction_amount_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/minus_54_00"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/transaction_title_tv" />

        <TextView
            android:id="@+id/transaction_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/sf_pro_text_regular"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/_24_may_2019"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@+id/transaction_amount_tv"
            app:layout_constraintStart_toStartOf="@+id/transaction_amount_tv"
            app:layout_constraintTop_toBottomOf="@+id/transaction_amount_tv" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>